eclipse-workspace/Class1/src/objects/Students__c.object
<CustomObject>
    <description>This is a Student object for library app</description>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Summary__c</fullName>
        <description>Enter summary</description>
        <label>First Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professional_Experience_Company_One__c</fullName>
        <label>Professional Experience Company One</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_One__c</fullName>
        <label>Project One</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsibility_One__c</fullName>
        <label>Responsibility One</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsibility_Three__c</fullName>
        <label>Responsibility Three</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsibility_Two__c</fullName>
        <label>Responsibility Two</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Summary__c</fullName>
        <label>Second Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <description>Unique id for the student</description>
        <displayFormat>A-{0000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Auto generated system id for the student</inlineHelpText>
        <label>StudentID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Third_Summary__c</fullName>
        <label>Third Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Students Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>